<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">

        <android.support.design.widget.TabLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabTextColor="@color/black"
                app:tabSelectedTextColor="@color/blue">

                <android.support.design.widget.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/task_special"/>

                <android.support.design.widget.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/task_inspection"/>
        </android.support.design.widget.TabLayout>

        <android.support.v7.widget.SearchView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginVertical="@dimen/dp_5"
                android:layout_marginHorizontal="@dimen/dp_10"
                app:defaultQueryHint="@string/hint_search"
                app:queryHint="@string/hint_search"
                app:iconifiedByDefault="false"
                android:background="@drawable/bg_search">

        </android.support.v7.widget.SearchView>

        <com.warmtel.expandtab.ExpandPopTabView
                android:id="@+id/expandtab_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/recycleView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
        </android.support.v7.widget.RecyclerView>
</LinearLayout>
