<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/login_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

    <com.drong.DropMenuView
            android:id="@+id/drop"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_100">

    </com.drong.DropMenuView>

    <LinearLayout
            android:id="@+id/login_account_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_48"
            android:layout_marginEnd="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_64"
            android:gravity="center">

        <ImageView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:src="@drawable/ic_user"
                android:contentDescription="@null"/>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_account_edit"
                    style="@style/style_circle_edit"
                    android:hint="@string/login_username"
                    android:maxLength="20"
                    android:layout_marginStart="@dimen/dp_6"
                    android:layout_marginLeft="@dimen/dp_6"/>
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <View
            android:id="@+id/login_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/grey_divider"
            android:layout_below="@id/login_account_group"
            android:layout_marginStart="@dimen/dp_64"
            android:layout_marginEnd="@dimen/dp_64"/>

    <LinearLayout
            android:id="@+id/login_password_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_48"
            android:layout_marginEnd="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_1"
            android:layout_below="@id/login_divider"
            android:gravity="center">

        <ImageView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:src="@drawable/ic_password"
                android:contentDescription="@null"/>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_password_edit"
                    style="@style/style_circle_edit"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:layout_marginStart="@dimen/dp_6"
                    android:layout_marginLeft="@dimen/dp_6"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <View
            android:id="@+id/register_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/grey_divider"
            android:layout_below="@id/login_password_group"
            android:layout_marginStart="@dimen/dp_64"
            android:layout_marginEnd="@dimen/dp_64"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/register_divider"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_32"
            android:gravity="center_vertical">

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_btn"
                style="@style/style_circle_btn"
                android:background="@drawable/test_drawable_animator"
                android:layout_marginTop="@dimen/dp_32"
                android:text="@string/login_in"/>


    </LinearLayout>

    <android.support.v4.widget.ContentLoadingProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyle"
            android:visibility="gone"
            android:layout_centerInParent="true"/>

    <com.spendshare.dao.spendshare.view.TabBar
            android:id="@+id/tabbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:menu="@menu/nav_menu">

    </com.spendshare.dao.spendshare.view.TabBar>

</RelativeLayout>
